src/test/ui/unsafe-block-without-braces.stderr
error: expected one of `extern`, `fn`, or `{`, found `std`
  --> $DIR/unsafe-block-without-braces.rs:13:9
   |
12 |     unsafe //{
   |           - expected one of `extern`, `fn`, or `{` here
13 |         std::mem::transmute::<f32, u32>(1.0);
   |         ^^^ unexpected token

error: aborting due to previous error

